<resources>
    <string name="app_name">COVID Italia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_title">Impostazioni</string>
    <string name="map">M234.1,28.1c-41.1,8.8 -72.2,39.5 -81.7,80.4 -2.9,12.3 -2.6,38.7 0.5,51.5 2.9,11.7 7.4,24.6 11.2,32.2l2.9,5.7 -7.3,-3.9c-4.2,-2.3 -8.6,-4 -10.5,-4 -2.4,-0 -16.6,7.4 -55.8,29.2 -28.9,16.1 -53,30 -53.4,30.8 -0.9,1.6 -30,160.7 -30,163.8 0,5.8 8.1,9.7 13.8,6.8 3.7,-1.9 3.8,-2.1 8.7,-30.1 2.1,-11.6 4.3,-21.5 4.9,-22.2 1,-1 88.2,-47.4 91.7,-48.8 1.3,-0.5 0.9,6.3 -2.2,47 -2,26.2 -4,48 -4.5,48.5 -1.3,1.2 -101.6,46.1 -102.1,45.7 -0.2,-0.3 0.4,-4.9 1.4,-10.5 1.6,-9.5 1.6,-10.1 -0.1,-12.6 -2.4,-3.8 -6.2,-5 -10.8,-3.6 -2.1,0.6 -4.2,1.9 -4.7,2.8 -0.5,1 -2.1,8.3 -3.5,16.3 -3,17 -3.4,28.9 -1,31.3 3.7,3.8 7.2,2.5 69.3,-25.4 33.1,-14.9 60.5,-27 60.9,-27 0.4,-0 27.7,12.2 60.8,27 39.5,17.8 61.2,27 63.4,27 2.2,-0 23.9,-9.2 63.4,-27 33.1,-14.8 60.5,-27 60.9,-27 0.4,-0 27.8,12.2 60.8,27 41.1,18.4 61.2,27 63.6,27 10.7,-0 10.6,-0.7 -6.7,-96.3 -7.7,-42.5 -14.3,-78.5 -14.6,-80 -0.9,-4.3 -4.1,-6.7 -8.9,-6.7 -6.1,-0 -8.5,2.7 -8.5,9.3 0.1,2.9 2.5,18.2 5.4,34.2 3,15.9 5.3,29.1 5.1,29.3 -0.1,0.1 -20.6,-23.5 -45.7,-52.5l-45.4,-52.8 31,-6.9 30.9,-6.9 4.4,2.4c2.3,1.3 4.3,2.4 4.3,2.4 0,-0 1.1,5.8 2.4,13 2.7,14.6 4,16.5 10.8,16.5 5,-0 8.8,-3.5 8.8,-8.1 0,-4 -4.8,-30.7 -5.9,-32.8 -0.5,-0.9 -24.5,-14.8 -53.4,-30.9 -38.5,-21.4 -53.4,-29.2 -55.8,-29.2 -1.8,-0 -6,1.6 -9.7,3.6 -3.6,2 -6.3,3.1 -5.9,2.3 0.3,-0.8 2.2,-5 4.1,-9.4 11.2,-25.5 14.6,-57.4 8.5,-80.5 -9.8,-37.9 -38.5,-66.9 -75.8,-76.7 -13.6,-3.6 -36.4,-4.2 -50,-1.2zM278.8,46.9c33.5,9.7 58.3,36.5 64.6,70 6.3,32.9 -8.4,72.9 -42,114.7 -8.9,11 -28.2,31.3 -38.5,40.5l-6.9,6.1 -18.3,-18.4c-10.1,-10.1 -22.1,-23 -26.7,-28.8 -45.1,-56.9 -54.7,-107.5 -27.9,-147.1 13.4,-19.9 32.9,-33 56.9,-38.4 9.3,-2.1 29.2,-1.4 38.8,1.4zM190.6,235.6c3,3.9 8.6,10.8 12.5,15.3 3.9,4.6 6.8,8.5 6.6,8.8 -0.6,0.6 -53.4,-6.9 -54.8,-7.8 -0.9,-0.5 -0.1,-16.6 1.7,-32.7l0.6,-5.3 14,7.3c13.5,7 14.2,7.6 19.4,14.4zM355.3,222.1c-0.5,0.3 -8.1,3.8 -17.1,7.7 -16.1,7 -16.2,7.1 -14.5,4.1 2.8,-4.7 4.9,-6.2 18.3,-13.3l12.5,-6.5 0.8,3.6c0.4,2 0.4,4 0,4.4zM137.2,234.7c-0.8,10.4 -1.7,19.1 -2.1,19.4 -1.2,1.2 -85.2,45.1 -85.5,44.8 -0.6,-0.7 6.3,-37.4 7.1,-37.7 0.4,-0.1 18.8,-10.4 40.8,-22.7 22,-12.3 40.2,-22.4 40.5,-22.5 0.3,-0 -0.1,8.4 -0.8,18.7zM410.6,236.2c6.3,3.5 11.4,6.5 11.4,6.8 0,0.3 -10.3,2.8 -22.9,5.6l-22.8,5 -0.7,-8.9c-0.4,-4.9 -0.5,-9.1 -0.4,-9.3 0.4,-0.4 20.9,-5.2 22.7,-5.3 0.7,-0.1 6.5,2.7 12.7,6.1zM359.5,271c0.9,13.5 2.1,25.6 2.7,27 0.5,1.4 1.2,9.2 1.5,17.5 0.2,8.2 1.9,34.1 3.8,57.5 1.8,23.4 3.2,42.5 3.1,42.6 0,-0 -15.7,7 -34.8,15.6l-34.7,15.6 -18.1,-18.8 -18,-18.8 0,-56.9 0,-56.9 5.8,-5c3.1,-2.7 9.3,-8.3 13.7,-12.5l8,-7.6 32,-14.1c30.5,-13.4 32,-13.9 32.7,-11.9 0.3,1.2 1.4,13.2 2.3,26.7zM194.3,276.5c20.7,3 38.5,6 39.5,6.7 1,0.7 4.4,3.6 7.6,6.4l5.7,5.1 0.3,62.9c0.2,34.6 0.1,68.6 -0.3,75.5l-0.6,12.5 -48.1,-73 -48,-73.1 1,-14.3c0.9,-13.4 1,-14.2 3,-14.2 1.2,-0 19.1,2.5 39.9,5.5zM133.2,286.4c-0.5,5.3 -1.1,9.8 -1.3,10 -1.3,1.2 -90.1,47.7 -90.4,47.4 -0.6,-0.6 3,-19.7 3.9,-20.6 1,-0.9 88,-47 88.4,-46.7 0.1,0.1 -0.2,4.6 -0.6,9.9zM431.7,353.3l52,60.3 2.6,14.4c1.4,7.9 2.5,14.5 2.3,14.7 -0.5,0.5 -104.1,-124.9 -105.9,-128.2 -1.1,-2.1 -2.1,-6.8 -2.5,-12.4 -0.4,-5 -0.7,-9.1 -0.6,-9.1 0.1,-0 23.6,27.1 52.1,60.3zM189.3,393c22.3,33.8 40.4,61.6 40.3,61.7 -0.2,0.2 -85.2,-37.5 -88.2,-39.1 -0.1,-0.1 6.2,-81.2 6.6,-84.5 0,-0.8 0.8,0.3 41.3,61.9zM431.5,404c20.2,24.5 37.5,45.4 38.4,46.4 0.9,1.1 1.2,1.7 0.6,1.4 -0.5,-0.3 -18.8,-8.6 -40.5,-18.3 -21.7,-9.7 -39.9,-18.1 -40.4,-18.5 -0.7,-0.8 -5.5,-55.2 -5.6,-64.3l0,-3.8 5.3,6.3c3,3.5 21.9,26.3 42.2,50.8zM282,454.9c0,0.3 -3.9,2.3 -8.5,4.3l-8.5,3.7 0,-13.2 0.1,-13.2 8.4,8.9c4.7,5 8.5,9.2 8.5,9.5z</string>
    <string name="settings">M199.2,21.4c-3.6,4.1 -3.2,3 -7.3,22.1 -1.7,8.2 -3.5,15.6 -3.9,16.4 -0.4,0.8 -5.9,3.6 -12.1,6.3l-11.2,4.7 -16.6,-10.6c-18.3,-11.7 -22.4,-13.1 -29.3,-9.9 -1.9,0.9 -18.3,16.6 -36.5,34.9 -35.5,35.6 -35.4,35.4 -34,44.1 0.3,1.7 5.3,10.7 11.1,19.8l10.6,16.6 -3.4,7.4c-1.8,4.1 -3.9,9.1 -4.5,11.1 -0.7,2.1 -2,4.1 -2.9,4.6 -0.9,0.5 -8.4,2.3 -16.7,4 -8.2,1.8 -15.9,3.5 -16.9,3.8 -3,0.9 -11.7,9.4 -13.2,13 -1.1,2.6 -1.4,12.4 -1.4,46.8 0,34.4 0.3,44.2 1.4,46.8 1.5,3.6 10.2,12.1 13.2,13 1,0.3 8.7,2 16.9,3.8 8.3,1.7 15.8,3.5 16.7,4 0.9,0.5 2.2,2.5 2.9,4.6 0.6,2 2.7,7 4.5,11.1l3.4,7.4 -10.6,16.6c-5.8,9.1 -10.8,18.1 -11.1,19.8 -1.4,8.7 -1.5,8.5 34,44.1 18.2,18.3 34.6,34 36.5,34.9 6.9,3.2 11,1.8 29.3,-9.9l16.6,-10.6 11.2,4.7c6.2,2.7 11.7,5.5 12.1,6.3 0.4,0.8 2.2,8.1 3.9,16.4 1.8,8.2 3.5,15.9 3.8,16.9 0.9,3 9.4,11.7 13,13.2 4.7,2 88.9,2 93.6,-0 3.6,-1.5 12.1,-10.2 13,-13.2 0.3,-1 2,-8.7 3.8,-16.9 1.7,-8.3 3.5,-15.8 4,-16.7 0.5,-0.9 2.5,-2.2 4.6,-2.9 2,-0.6 7,-2.7 11.1,-4.5l7.4,-3.4 16.6,10.6c18.4,11.8 22.6,13.2 29.4,10 1.9,-0.9 18.3,-16.6 36.5,-34.9 35.5,-35.6 35.4,-35.4 34,-44.1 -0.3,-1.7 -5.3,-10.7 -11.1,-19.8l-10.6,-16.6 3.4,-7.4c1.8,-4.1 3.9,-9.1 4.5,-11.1 0.7,-2.1 2,-4.1 2.9,-4.6 0.9,-0.5 8.7,-2.3 17.2,-4.1 16.8,-3.5 18.1,-4 22.3,-7.8l2.7,-2.6 0,-53.1 0,-53.1 -2.7,-2.6c-4.2,-3.8 -5.5,-4.3 -22.3,-7.8 -8.5,-1.8 -16.3,-3.6 -17.2,-4.1 -0.9,-0.5 -2.2,-2.5 -2.9,-4.6 -0.6,-2 -2.7,-7 -4.5,-11.1l-3.4,-7.4 10.6,-16.6c11.8,-18.4 13.2,-22.6 10,-29.4 -0.9,-1.9 -16.6,-18.3 -34.9,-36.5 -35.6,-35.5 -35.4,-35.4 -44.1,-34 -1.7,0.3 -10.7,5.3 -19.8,11.1l-16.6,10.6 -7.4,-3.4c-4.1,-1.8 -9.1,-3.9 -11.1,-4.5 -2.1,-0.7 -4.1,-2 -4.6,-2.9 -0.5,-0.9 -2.3,-8.7 -4.1,-17.2 -3.5,-16.8 -4,-18.2 -7.8,-22.3l-2.6,-2.7 -53.2,-0 -53.2,-0 -3,3.4zM269.3,178.5c11.9,2.1 21.6,5.9 31.6,12.5 10.2,6.8 14.2,10.9 20.8,21.1 8,12.4 13.3,30 13.3,44.4 0,14.4 -5.3,32 -13.3,44.4 -6.6,10.2 -10.6,14.3 -20.8,21.1 -10,6.6 -19.7,10.4 -31.6,12.5 -10.8,1.9 -16.8,1.9 -27.6,-0 -11.9,-2.1 -21.6,-5.9 -31.6,-12.5 -10.2,-6.8 -14.2,-10.9 -20.8,-21.1 -8,-12.4 -13.3,-30 -13.3,-44.4 0,-14.4 5.3,-32 13.3,-44.4 6.6,-10.3 10.6,-14.3 20.8,-21.1 17.9,-11.8 38.3,-16.1 59.2,-12.5z</string>
    <string name="skull">M225.5,1.6c-90.2,12.2 -164.9,78.3 -187.5,165.8 -5.8,22.2 -6.4,27.9 -6.4,56.6 -0.1,23.1 0.2,28.2 2.2,39.5 5.9,33.8 23.4,69 48.9,98.5 5.4,6.3 12.7,13.5 16,16 7.5,5.5 18.7,12 20.7,12 1.3,-0 1.5,4.9 1.8,35.8l0.3,35.7 3.2,6.8c4.2,8.9 12.6,17.3 21.3,21.4 6.3,3 26.6,10.3 32.3,11.7l2.7,0.6 0,-19.3c0,-18 0.1,-19.6 2.3,-23.7 5.3,-10.6 19.2,-11.1 25.2,-1 1.8,3.2 2,5.5 2.3,23.8l0.4,20.2 14.9,-0 14.9,-0 0,-19.3c0,-18 0.1,-19.6 2.3,-23.7 5.3,-10.6 19.2,-11.1 25.2,-1 1.8,3.2 2,5.5 2.3,23.7l0.4,20.3 14.9,-0 14.9,-0 0,-19.3c0,-18 0.1,-19.6 2.3,-23.7 5.3,-10.6 19.2,-11.1 25.2,-1 1.8,3.1 2,5.5 2.3,23.7l0.4,20.3 2.6,-0.7c5.8,-1.3 26,-8.6 31.8,-11.3 11.5,-5.5 19.8,-15 23.5,-27.1 1.7,-5.5 1.9,-9.5 1.9,-39.5 0,-29.3 0.2,-33.4 1.5,-33.4 5.3,-0 20.8,-11.9 32.3,-24.9 24.3,-27.3 41.3,-58.8 49.8,-92.5 1.4,-5.5 2.9,-10.5 3.4,-11.1 3,-3.9 4,-46.8 1.4,-66.7 -12.9,-100.1 -93.2,-180.3 -193.7,-193.3 -14.5,-1.9 -46.2,-1.8 -60.2,0.1zM175.7,181.1c27.1,3.7 50.3,22.3 60,47.9 8.4,22.3 5.8,46 -7.2,66.2 -15.5,23.9 -44,37.4 -71.1,33.8 -34.3,-4.5 -60.9,-31.1 -65.4,-65.4 -4.4,-32.9 16.1,-66.2 48.1,-78.3 12.9,-4.8 22.7,-6 35.6,-4.2zM355.6,181.1c40.1,5.6 69.6,43.4 64.4,82.5 -5.4,40.8 -43.1,70.7 -82.6,65.4 -34.3,-4.5 -60.9,-31.1 -65.4,-65.4 -4.4,-32.9 16.1,-66.2 48.1,-78.3 12.8,-4.8 22.7,-6 35.5,-4.2zM263.8,330.4c3.2,1.7 35.5,34.2 37.1,37.3 0.6,1.2 1.1,4.6 1.1,7.5 0,6.3 -2.4,10.9 -7.2,13.8 -3.1,1.9 -5.1,2 -38.8,2 -33.7,-0 -35.7,-0.1 -38.8,-2 -4.8,-2.9 -7.2,-7.5 -7.2,-13.8 0,-2.9 0.6,-6.5 1.4,-8 1.6,-3 34,-35.4 37.1,-37.1 2.9,-1.5 12.1,-1.3 15.3,0.3z</string>
    <string name="mappa">Mappa</string>
    <string name="grafici">Grafici</string>
    <string name="oggi">Oggi</string>
    <string name="notizie">Notizie</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="mostra_dati">Mostra dati:</string>
    <string name="regione">Regione</string>
    <string name="infetti">Infetti</string>
    <string name="guariti">Guariti</string>
    <string name="morti">Morti</string>
    <string name="positivi">Positivi</string>
    <string name="nuovi_positivi">Nuovi positivi</string>
    <string name="unit">Unità</string>
    <string name="percentage">%</string>
    <string name="tamponi">Tamponi</string>
    <string name="torta">Torta</string>
    <string name="deceduti">Deceduti</string>
    <string name="nuovi_deceduti">Nuovi deceduti</string>
</resources>