<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.chartTabs.InfectedTab">

    <it.micheledallerive.covid_italia.utils.LockableScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/deceduti"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                android:layout_width="0dp"
                android:layout_height="256dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-1382810446229806/3874209053"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line_chart" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/nuovi_deceduti"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adView" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:gravity="end"
                app:layout_constraintBottom_toTopOf="@+id/view_switcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView2"
                app:layout_constraintTop_toBottomOf="@id/adView"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/unit_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/unit"
                    android:textSize="14sp"
                    />
                <Button
                    android:id="@+id/perc_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/percentage"
                    android:textSize="14sp"
                    />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <ViewSwitcher
                android:id="@+id/view_switcher"
                android:layout_width="0dp"
                android:layout_height="256dp"
                android:layout_marginTop="8dp"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggle_button">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </ViewSwitcher>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-1382810446229806/4902212088"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_switcher"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </it.micheledallerive.covid_italia.utils.LockableScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>